Fix header covering body at 501px width. Margin-top

--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ p {
     
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 501px) {
     .head-text {
         display: none;
     }
@@ -310,6 +310,10 @@ p {
         height: 100px;
         position: relative;
         top: 10px;
+    }
+
+    .part-one {
+        margin-top: 150px;
     }
 }
 
